// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Protected route component renders correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    component={[Function]}
    exact={true}
    hasPermissions={
      Array [
        "ROLE_USER_SHOW_GRAPHIC_CONFIGURATION",
      ]
    }
    isAuthenticated={true}
    location={
      Object {
        "pathname": "/login",
      }
    }
    path="/patients/:id"
    routes={
      Object {
        "authentication": Object {
          "login": "/login",
        },
        "general": Object {
          "home": "/home",
        },
      }
    }
    validateSession={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "class",
    "props": Object {
      "exact": true,
      "path": "/patients/:id",
      "render": [Function],
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "class",
      "props": Object {
        "exact": true,
        "path": "/patients/:id",
        "render": [Function],
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Protected route component renders with default props 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    component={[Function]}
    exact={true}
    isAuthenticated={true}
    location={
      Object {
        "pathname": "/login",
      }
    }
    path="/patients/:id"
    routes={
      Object {
        "authentication": Object {
          "login": "/login",
        },
        "general": Object {
          "home": "/home",
        },
      }
    }
    validateSession={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "class",
    "props": Object {
      "exact": true,
      "path": "/patients/:id",
      "render": [Function],
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "class",
      "props": Object {
        "exact": true,
        "path": "/patients/:id",
        "render": [Function],
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
